# cocorreo

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.txt  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
src/cocorreo/: api.py  cli.py  crypto.py  db.py  discover.py  export.py  fix_dates.py  importer.py  keystore.py  mbox.py  message.py  models.py  sanitise.py  sanitize.py  schema.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts
web/src/components/: FolderList.tsx  GalleryView.tsx  MessageDetail.tsx  MessageHtml.tsx  MessageList.tsx  MessageListToolbar.tsx  StatsView.tsx
web/src/lib/: htmlPrepare.ts  parseQuery.ts  useDebouncedValue.ts  utils.ts
